@@ -4,6 +4,11 @@ its own separate CHANGELOG file.
 
 14 August 2009
 + Fixed browser incompatibility issue with editors.
++ Added ability to set fckeditor's image, media, and files directory in the config.php
++ Updated: 
+javascript/editors/fckeditor/default.php
+javascript/editors/fckeditor/editor/filemanager/connectors/phpws/config.php
+javascript/editors/fckeditor/head.js
 
 Version 1.9.6
 ---------------------------------------------------------------------
